Refactoring. ButterKnife to ViewBinding