@@ -5,58 +5,35 @@ import android.content.Intent;
 import android.os.Bundle;
 import android.util.Log;
 import android.widget.ArrayAdapter;
-import android.widget.AutoCompleteTextView;
-import android.widget.ImageButton;
-import android.widget.TextView;
 
 import androidx.appcompat.app.AppCompatActivity;
-import androidx.appcompat.widget.AppCompatButton;
 
-import com.google.android.material.slider.RangeSlider;
-import com.google.android.material.textfield.TextInputLayout;
-import com.startup.eventsearcher.R;
+import com.startup.eventsearcher.databinding.ActivityFilterBinding;
 import com.startup.eventsearcher.main.ui.events.model.Event;
 import com.startup.eventsearcher.main.ui.events.model.EventsList;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
-import butterknife.BindView;
-import butterknife.ButterKnife;
-
 public class FilterActivity extends AppCompatActivity {
 
     private static final String TAG = "myFilter";
 
-    @BindView(R.id.event_list_filters_city_spinner)
-    AutoCompleteTextView autoCompleteTextViewCitySpinner;
-    @BindView(R.id.event_list_filters_start_count_members)
-    TextView textViewStartCountMembers;
-    @BindView(R.id.event_list_filters_end_count_members)
-    TextView textViewEndCountMembers;
-    @BindView(R.id.event_list_filters_range_members)
-    RangeSlider rangeSliderMembers;
-    @BindView(R.id.event_list_filters_start_date)
-    TextInputLayout textInputLayoutStartDate;
-    @BindView(R.id.event_list_filters_reset)
-    AppCompatButton buttonReset;
-    @BindView(R.id.event_list_filters_apply)
-    AppCompatButton buttonApply;
-    @BindView(R.id.event_list_filters_close)
-    ImageButton imageButtonClose;
+    private ActivityFilterBinding bind;
 
-    private Set<String> arrayListCities = new HashSet<>();
+    private final Set<String> arrayListCities = new HashSet<>();
     private Filter filter;
 
     @Override
     public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_filter);
-        ButterKnife.bind(this);
+        bind = ActivityFilterBinding.inflate(getLayoutInflater());
+        setContentView(bind.getRoot());
 
         filter = FilterHandler.getFilterFromJSON(this);
         Log.d(TAG, "onCreate: filter = " + filter.toString());
@@ -70,7 +47,7 @@ public class FilterActivity extends AppCompatActivity {
     }
 
     private void setCity() {
-        autoCompleteTextViewCitySpinner.setText(filter.getCity());
+        bind.eventListFiltersCitySpinner.setText(filter.getCity());
     }
 
     //Инициализация выпадающего списка с городами
@@ -78,7 +55,7 @@ public class FilterActivity extends AppCompatActivity {
         for (Event event: EventsList.getEventArrayList()){
             arrayListCities.add(event.getEventAddress().getCity());
         }
-        autoCompleteTextViewCitySpinner.setAdapter(new ArrayAdapter<>(this,
+        bind.eventListFiltersCitySpinner.setAdapter(new ArrayAdapter<>(this,
                 android.R.layout.simple_dropdown_item_1line, new ArrayList<>(arrayListCities)));
     }
 
@@ -87,14 +64,14 @@ public class FilterActivity extends AppCompatActivity {
         int endCount;
         if (filter.getEndCountMembers() == -1){
             endCount = 50;
-            textViewStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
-            textViewEndCountMembers.setText("max");
+            bind.eventListFiltersStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
+            bind.eventListFiltersEndCountMembers.setText("max");
         }else {
             endCount = filter.getEndCountMembers();
-            textViewStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
-            textViewEndCountMembers.setText(String.valueOf(endCount));
+            bind.eventListFiltersStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
+            bind.eventListFiltersEndCountMembers.setText(String.valueOf(endCount));
         }
-        rangeSliderMembers.setValues(List.of((float) filter.getStartCountMembers(), (float) endCount));
+        bind.eventListFiltersRangeMembers.setValues(Arrays.asList((float) filter.getStartCountMembers(), (float) endCount));
     }
 
     private void setDate() {
@@ -107,7 +84,7 @@ public class FilterActivity extends AppCompatActivity {
                     (filter.getLastSelectedMonth() + 1) +"." +
                     filter.getLastSelectedYear();
         }
-        Objects.requireNonNull(textInputLayoutStartDate.getEditText()).setText(date);
+        Objects.requireNonNull(bind.eventListFiltersStartDate.getEditText()).setText(date);
     }
 
     //Сброс фильтра
@@ -126,33 +103,31 @@ public class FilterActivity extends AppCompatActivity {
 
     private void componentListener() {
 
-        rangeSliderMembers.addOnChangeListener((slider, value, fromUser) -> {
+        bind.eventListFiltersRangeMembers.addOnChangeListener((slider, value, fromUser) -> {
             List<Float> values = slider.getValues();
             filter.setStartCountMembers(Math.round(values.get(0)));
             filter.setEndCountMembers(Math.round(values.get(1)));
 
             if (filter.getEndCountMembers() == 50){
                 filter.setEndCountMembers(-1);
-                textViewEndCountMembers.setText("max");
+                bind.eventListFiltersEndCountMembers.setText("max");
             }else {
-                textViewEndCountMembers.setText(String.valueOf(filter.getEndCountMembers()));
+                bind.eventListFiltersEndCountMembers.setText(String.valueOf(filter.getEndCountMembers()));
             }
-            textViewStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
+            bind.eventListFiltersStartCountMembers.setText(String.valueOf(filter.getStartCountMembers()));
         });
 
         //Закрыть фильтр
-        imageButtonClose.setOnClickListener(view -> {
+        bind.eventListFiltersClose.setOnClickListener(view -> {
             setResult(RESULT_CANCELED);
             finish();
         });
 
-        buttonReset.setOnClickListener(view -> {
-            resetFilter();
-        });
+        bind.eventListFiltersReset.setOnClickListener(view -> resetFilter());
 
         //Применить фильтр
-        buttonApply.setOnClickListener(view -> {
-            filter.setCity(autoCompleteTextViewCitySpinner.getText().toString());
+        bind.eventListFiltersApply.setOnClickListener(view -> {
+            filter.setCity(bind.eventListFiltersCitySpinner.getText().toString());
             FilterHandler.saveFilterToJSON(this);
             Intent intent = new Intent();
             setResult(RESULT_OK, intent);
@@ -160,27 +135,26 @@ public class FilterActivity extends AppCompatActivity {
         });
 
         //Выбор даты
-        Objects.requireNonNull(textInputLayoutStartDate.getEditText()).setOnClickListener(view -> {
+        Objects.requireNonNull(bind.eventListFiltersStartDate.getEditText()).setOnClickListener(view -> {
 
             DatePickerDialog.OnDateSetListener dateSetListener = (view1, year, monthOfYear, dayOfMonth) -> {
                 String date = dayOfMonth + "." + (monthOfYear + 1) + "." + year;
-                textInputLayoutStartDate.getEditText().setText(date);
+                bind.eventListFiltersStartDate.getEditText().setText(date);
                 filter.setLastSelectedYear(year);
                 filter.setLastSelectedMonth(monthOfYear);
                 filter.setLastSelectedDayOfMonth(dayOfMonth);
             };
 
-            DatePickerDialog datePickerDialog = null;
             int year = filter.getLastSelectedYear();
             int month = filter.getLastSelectedMonth();
             int dayOfMonth = filter.getLastSelectedDayOfMonth();
-            if (textInputLayoutStartDate.getEditText().getText().toString().equals("")){
+            if (bind.eventListFiltersStartDate.getEditText().getText().toString().equals("")){
                 Calendar calendar = Calendar.getInstance();
                 year = calendar.get(Calendar.YEAR);
                 month = calendar.get(Calendar.MONTH);
                 dayOfMonth = calendar.get(Calendar.DAY_OF_MONTH);
             }
-            datePickerDialog = new DatePickerDialog(view.getContext(),
+            DatePickerDialog datePickerDialog = new DatePickerDialog(view.getContext(),
                     android.R.style.Theme_DeviceDefault_Dialog,
                     dateSetListener, year, month, dayOfMonth);
             datePickerDialog.show();
